--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -33,6 +33,12 @@
 			<version>1.3.2</version>
 		</dependency>
 
+				<!-- Spring WebSocket -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
 		<!-- Spring Boot Web (for REST APIs) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
