--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -11,10 +11,16 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA and Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
+# Disable open-in-view
+spring.jpa.open-in-view=false
+
+# Disable Thymeleaf template check
+spring.thymeleaf.check-template-location=false
+
 # Connection Pool Configuration
-spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.maximum-pool-size=1000
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=300000
+
